@@ -1,3 +1,8 @@
+2005-06-05  Yves Combe  <yves@ycombe.net>
+
+	PROFILS
+	* Database init integrity and VERSION check.
+
 2005-06-03  Yves Combe  <yves@ycombe.net>
 
 	PROFILS
